Bug 40345 - [EDITING] SwAnchoredObject::GetAnchorFrm crash on loading styles from other document
Summary: [EDITING] SwAnchoredObject::GetAnchorFrm crash on loading styles from other d...
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: Other Linux (All)
: high major
Assignee: Caolán McNamara
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2011-08-24 03:36 UTC by Cor Nouws
Modified: 2011-08-25 01:20 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
backtrace (5.41 KB, text/x-log)
2011-08-24 03:36 UTC, Cor Nouws
Details
allthreads backtrace (10.12 KB, text/x-log)
2011-08-24 03:36 UTC, Cor Nouws
Details
sample document from which I attempted to load styles (22.49 KB, application/vnd.oasis.opendocument.text)
2011-08-24 04:07 UTC, Caolán McNamara
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2011-08-24 03:36:10 UTC
Created attachment 50534 [details]
backtrace

Build ID: 117281b-4eb4f62-260b7c1

- open document
- open Styles and Formatting, choose Load styles (top right)
- I checked Text, Frame, Pages, Numbering, Overwrite
  (may be not needed)
- from file, select file and Open
  > crash

backtrace attached, will attach allthreads backtrace too
Comment 1 Cor Nouws 2011-08-24 03:36:38 UTC
Created attachment 50535 [details]
allthreads backtrace
Comment 2 Cor Nouws 2011-08-24 03:41:23 UTC
(a regression indeed, just did the work in LibO343 and works perfect there)
Comment 3 Caolán McNamara 2011-08-24 04:07:30 UTC
Created attachment 50536 [details]
sample document from which I attempted to load styles
Comment 4 Caolán McNamara 2011-08-24 04:08:42 UTC
Didn't crash for me with the above .odt. AnchoredObject suggests a drawing object, or something like one, presumably in the document from which the load happens, which triggers it. 

Able to attach a source document which causes this ?
Comment 5 Cor Nouws 2011-08-24 04:50:31 UTC
(In reply to comment #4)

> Able to attach a source document which causes this ?

Not really, but will send it by mail, so that you can test with it
Comment 6 Caolán McNamara 2011-08-24 06:00:01 UTC
ka-boom, yup
Comment 7 Caolán McNamara 2011-08-24 06:02:25 UTC
#0  0x00007fd904cd02c4 in SwAnchoredObject::GetAnchorFrm (this=0x0)
    at /home/caolan/LibreOffice/core/sw/source/core/layout/anchoredobject.cxx:148
#1  0x00007fd904d594d8 in SwRootFrm::Paint (this=0x219d7f8, rRect=..., pPrintData=0x0)
    at /home/caolan/LibreOffice/core/sw/source/core/layout/paintfrm.cxx:2958
#2  0x00007fd905068728 in ViewShell::ImplEndAction (this=0x219d168, bIdleEnd=0 '\000')
    at /home/caolan/LibreOffice/core/sw/source/core/view/viewsh.cxx:348
#3  0x00007fd904a8339a in ViewShell::EndAction (this=0x219d168,	bIdleEnd=0 '\000')
    at /home/caolan/LibreOffice/core/sw/inc/viewsh.hxx:596
#4  0x00007fd904a737c1 in SwCrsrShell::EndAction (this=0x219d168, bIdleEnd=0 '\000')
    at /home/caolan/LibreOffice/core/sw/source/core/crsr/crsrsh.cxx:260
#5  0x00007fd904c5a957 in SwEditShell::EndAllAction (this=0x219d168)
    at /home/caolan/LibreOffice/core/sw/source/core/edit/edws.cxx:130
Comment 8 Caolán McNamara 2011-08-24 06:50:37 UTC
fixed with http://cgit.freedesktop.org/libreoffice/core/commit/?id=b5040d946ee078ab16ad175dbf6bdc072f9e80ec

This is either an old bug that we just got lucky with previously, or a relatively new bug that I'm just papering over the cracks with, i.e. not fixing the root cause.

If there is a daily master build, ideally since the onegit merge, where it *does* work prior today, it'd be great to get the buildid of that to examine with bisecting where it went wrong.
Comment 9 Cor Nouws 2011-08-24 12:36:31 UTC
(In reply to comment #8)
> fixed with

Super - thanks!

> If there is a daily master build, ideally since the onegit merge, where it
> *does* work prior today, it'd be great to get the buildid of that to examine
> with bisecting where it went wrong.

Does someone who know where to find older masterbuilds ?
Comment 10 Caolán McNamara 2011-08-25 01:20:48 UTC
http://dev-builds.libreoffice.org/daily/Fedora_15_gcc-4.6_x86_64_dbgutil/master/ is our best populated one as far as I can see, but its x86_64, so it looks like we don't have a good 32bit install-set uploading linux master one