Resolves: fdo#40345 don't crash loading temp document to get frame styles